@@ -40,61 +40,19 @@
 CollectionTreeItemModel::CollectionTreeItemModel( const QList<CategoryId::CatMenuId> &levelType )
     : CollectionTreeItemModelBase()
 {
-    CollectionManager* collMgr = CollectionManager::instance();
+    m_rootItem = new CollectionTreeItem( this );
+    CollectionManager *collMgr = CollectionManager::instance();
     connect( collMgr, SIGNAL(collectionAdded(Collections::Collection*)), this, SLOT(collectionAdded(Collections::Collection*)), Qt::QueuedConnection );
     connect( collMgr, SIGNAL(collectionRemoved(QString)), this, SLOT(collectionRemoved(QString)) );
-    //delete m_rootItem; //clears the whole tree!
-    m_rootItem = new CollectionTreeItem( this );
-    m_collections.clear();
-    QList<Collections::Collection*> collections = CollectionManager::instance()->viewableCollections();
+
+    QList<Collections::Collection *> collections = CollectionManager::instance()->viewableCollections();
     foreach( Collections::Collection *coll, collections )
     {
         connect( coll, SIGNAL(updated()), this, SLOT(slotFilter()) ) ;
         m_collections.insert( coll->collectionId(), CollectionRoot( coll, new CollectionTreeItem( coll, m_rootItem, this ) ) );
     }
-    //m_rootItem->setChildrenLoaded( true ); //children of the root item are the collection items
-    updateHeaderText();
+
     setLevels( levelType );
-    debug() << "Collection root has " << m_rootItem->childCount() << " children";
-}
-
-CollectionTreeItemModel::~CollectionTreeItemModel()
-{
-    DEBUG_BLOCK
-
-    KConfigGroup config = Amarok::config( "Collection Browser" );
-    QList<int> levelNumbers;
-    foreach( CategoryId::CatMenuId category, levels() )
-        levelNumbers.append( category );
-    config.writeEntry( "TreeCategory", levelNumbers );
-}
-
-void
-CollectionTreeItemModel::setLevels( const QList<CategoryId::CatMenuId> &levelType )
-{
-    if( m_levelType == levelType && m_rootItem )
-        return;
-
-    m_levelType = levelType;
-    delete m_rootItem; //clears the whole tree!
-    m_rootItem = new CollectionTreeItem( this );
-    m_collections.clear();
-    QList<Collections::Collection*> collections = CollectionManager::instance()->viewableCollections();
-    foreach( Collections::Collection *coll, collections )
-    {
-        connect( coll, SIGNAL(updated()), this, SLOT(slotFilter()) ) ;
-        m_collections.insert( coll->collectionId(), CollectionRoot( coll, new CollectionTreeItem( coll, m_rootItem, this ) ) );
-    }
-    m_rootItem->setRequiresUpdate( false );  //all collections have been loaded already
-    updateHeaderText();
-    m_expandedItems.clear();
-    m_expandedSpecialNodes.clear();
-    m_runningQueries.clear();
-    m_childQueries.clear();
-    m_compilationQueries.clear();
-    reset();
-    if( m_collections.count() == 1 )
-        QTimer::singleShot( 0, this, SLOT(requestCollectionsExpansion()) );
 }
 
 Qt::ItemFlags
@@ -230,8 +188,6 @@ CollectionTreeItemModel::supportedDropActions() const
 void
 CollectionTreeItemModel::collectionAdded( Collections::Collection *newCollection )
 {
-    DEBUG_BLOCK
-
     if( !newCollection )
         return;
 
@@ -240,8 +196,6 @@ CollectionTreeItemModel::collectionAdded( Collections::Collection *newCollection
     QString collectionId = newCollection->collectionId();
     if( m_collections.contains( collectionId ) )
         return;
-
-    debug() << "Added collection id:" << collectionId;
 
     //inserts new collection at the end.
     beginInsertRows( QModelIndex(), m_rootItem->childCount(), m_rootItem->childCount() );
@@ -255,10 +209,6 @@ CollectionTreeItemModel::collectionAdded( Collections::Collection *newCollection
 void
 CollectionTreeItemModel::collectionRemoved( const QString &collectionId )
 {
-    DEBUG_BLOCK
-
-    debug() << "Removed collection id:" << collectionId;
-
     int count = m_rootItem->childCount();
     for( int i = 0; i < count; i++ )
     {
@@ -280,9 +230,6 @@ CollectionTreeItemModel::filterChildren()
     int count = m_rootItem->childCount();
     for ( int i = 0; i < count; i++ )
     {
-        //CollectionTreeItem *item = m_rootItem->child( i );
-        //if( item )
-        //    item->setChildrenLoaded( false );
         markSubTreeAsDirty( m_rootItem->child( i ) );
         ensureChildrenLoaded( m_rootItem->child( i ) );
     }
@@ -291,22 +238,10 @@ CollectionTreeItemModel::filterChildren()
 void
 CollectionTreeItemModel::requestCollectionsExpansion()
 {
-    DEBUG_BLOCK
     for( int i = 0, count = m_rootItem->childCount(); i < count; i++ )
     {
         emit expandIndex( createIndex( i, 0, m_rootItem->child( i ) ) );
     }
 }
 
-void CollectionTreeItemModel::update()
-{
-    for( int i = 0; i < m_rootItem->childCount(); i++ )
-    {
-        markSubTreeAsDirty( m_rootItem->child( i ) );
-        ensureChildrenLoaded( m_rootItem->child( i ) );
-    }
-
-}
-
 #include "CollectionTreeItemModel.moc"
-
