@@ -43,7 +43,6 @@ class AMAROK_EXPORT SingleCollectionTreeItemModel: public CollectionTreeItemMode
         virtual QVariant data(const QModelIndex &index, int role) const;
         virtual bool canFetchMore( const QModelIndex &parent ) const;
         virtual void fetchMore( const QModelIndex &parent );
-        virtual void setLevels( const QList<CategoryId::CatMenuId> &levelType );
         virtual Qt::ItemFlags flags(const QModelIndex &index) const;
 
     protected:
